# pandaspgfplots

./: README.md  pyproject.toml
src/pandaspgfplots/: plots.py
